[package]
name = "ascii-art"
version = "0.1.0"
edition = "2021"
authors = ["Nav <navaneeth.sajiv@gmail.com>"]
description = "A ascii-converter written in Rust 🦀"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
image = "0.24.5"
